test/compile-fail/resolution/conflicts/struct-fn/expected.txt
error: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/struct-fn/top.rhdl:3:8
  │
3 │ struct b {}
  │        - previous definition of the name `b` here
  ·
7 │ fn b() {}
  │    ^ `b` redefined here

